# modal-analysis-ml

./: .gitignore  Dockerfile  Parse.ipynb  Procfile  README.md  config.py  deploy_to_caas.bat  deploy_to_caas.sh  deploy_to_hpc.sh  index.html  main.py  manifest.yaml  manifest_caas.yaml  manifest_hpc.yaml  ntbk.ipynb  parse.py  pyproject.toml  requirements.txt  result.html  script.env  script.env.example  test.py
analyser/: modalAnalyser.py
backend/: app.py  routes.py
core/analyser/: modalAnalyser.py
core/parser/: datParser.py  inpParser.py  modalParser.py
core/preprocessing/: create_h3d.py  create_json.py
core/preprocessing/filter/: plot.py
core/preprocessing/io/: create_json.py  global_inputs_hook.py  sort_files.py
frontend/: index.html  package-lock.json  package.json  result.html  style.css  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: FileUpload.css  FileUpload.jsx  Results.css  Results.jsx
jupyter/: ntbk.ipynb
labels/: labels.txt
parser/: datParser.py  modalParser.py
preprocessing/: create_json.py
scripts/: main.py  model1_preprocess.py  model2_preprocess.py  plot.py  preprocess.py  sort.py  stiffness_preprocess.py
src/analyser/: modalAnalyser.py
templates/: base.html  index.html
