[project]
name = "modal-analysis"
version = "0.1.0"
description = "modal-analysis-tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "flask==3.1.0",
    "fonttools==4.58.4",
    "greenlet==3.2.2",
    "gunicorn==23.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "narwhals==1.43.1",
    "numpy==2.2.6",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "plotly==6.1.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "sqlalchemy==2.0.41",
    "typing-extensions==4.14.0",
    "tzdata==2025.2",
    "werkzeug==3.1.3",
]
